# ReputationSystem

./: README.md  color.css  compilar.sh  initNodo.sh
contracts/psp22/: Cargo.toml  lib.rs
contracts/psp34_bis/: lib.rs
contracts/psp34_bis/V1/: Cargo.toml  lib.rs
contracts/psp34_bis/V2/: Cargo.toml  lib.rs
contracts/reputationSystem/: Cargo.toml  errors.rs  lib.rs
