[package]
name = "reputationSystem"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
psp34_bis= { path = "../psp34_bis", default-features = false,  features = ["ink-as-dependency"] }
my_psp22= { path = "../psp22", default-features = false,  features = ["ink-as-dependency"] }


[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # Nota:La generacion de metadata requiere el vector `std`.Si no lo especificamos
    # el contrato falla 
    "psp34_bis/std",
    "my_psp22/std",
]
ink-as-dependency = []
e2e-tests = []
